--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,15 @@ html,
 .title {
   font-size: 3rem;
 }
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+ul {
+  padding: 1rem;
+  height: 200px;
+  overflow-y: scroll;
+}
